--- a/portfolio/smartphone/index.html
+++ b/portfolio/smartphone/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+  <a href="/portfolio/index.html">
+    Home
+</a>
     <div class="container">
         <div class="group">
           <div class="box">Hi</div>
