--- a/portfolio/css_portfolio2/index.html
+++ b/portfolio/css_portfolio2/index.html
@@ -9,6 +9,10 @@
 <body>
   <h1>CSS Portfolio</h1>
 
+  <a href="/portfolio/index.html">
+    Home
+</a>
+
   <a href="media_queries/">
     <img src="thumbnails/media_queries_thumb.jpg" alt="media queries page">
     Media Queries
