--- a/portfolio/Confused_net/index.html
+++ b/portfolio/Confused_net/index.html
@@ -9,7 +9,7 @@
     <title>Sock.net </title>
 </head>
 <body>
-    <a href="/portfolio/index.html">
+    <a href="/portfolio/">
         Home
     </a>
     
