--- a/portfolio/coolsite/index.html
+++ b/portfolio/coolsite/index.html
@@ -10,7 +10,7 @@
     
 </style>
 <body>
-    <a href="/portfolio/index.html">
+    <a href="/portfolio/">
         Home
     </a>
     <h1>My View </h1>
