--- a/portfolio/smartphone/index.html
+++ b/portfolio/smartphone/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <a href="/portfolio/index.html">
+  <a href="/portfolio/">
     Home
 </a>
     <div class="container">
