--- a/portfolio/coolsite/index.html
+++ b/portfolio/coolsite/index.html
@@ -10,7 +10,7 @@
     
 </style>
 <body>
-    <a href="/portfolio/">
+    <a href="/webdev1-fa20/portfolio/">
         Home
     </a>
     <h1>My View </h1>
