--- a/portfolio/css_portfolio2/index.html
+++ b/portfolio/css_portfolio2/index.html
@@ -13,6 +13,10 @@
     Home
 </a>
 
+<a href="about/">
+  About Page
+</a>
+
   <a href="media_queries/">
     <img src="thumbnails/media_queries_thumb.jpg" alt="media queries page">
     Media Queries
