--- a/portfolio/htmlcss/index.html
+++ b/portfolio/htmlcss/index.html
@@ -11,6 +11,12 @@
     Home
 </a>
 
+<a href="about/">
+  About Page
+</a>
+
+
+
     <header>
         <h1> Mohammed </h1>
         <h3> Things I like </h3>
