--- a/portfolio/loading/index.html
+++ b/portfolio/loading/index.html
@@ -11,6 +11,9 @@
     <a href="/webdev1-fa20/portfolio/">
         Home
     </a>
+    <a href="about/">
+        About Page
+    </a>
       
       <a href="loadingbar/index.html">Loading Bar</a>
      
