--- a/portfolio/Confused_net/index.html
+++ b/portfolio/Confused_net/index.html
@@ -12,6 +12,9 @@
     <a href="/webdev1-fa20/portfolio/">
         Home
     </a>
+    <a href="about/">
+        About Page
+    </a>
     
     <h1>Sock.net - Sock.net - Sock.net</h1>
         <h2>Enjoy.....</h2>
