--- a/portfolio/coolsite/index.html
+++ b/portfolio/coolsite/index.html
@@ -13,6 +13,11 @@
     <a href="/webdev1-fa20/portfolio/">
         Home
     </a>
+
+    <a href="about/">
+        About Page
+    </a>
+    
     <h1>My View </h1>
 
     <p>My personal review of the web is complex. They are times where i love and they are times where I hate it. From laughing at memes to reading about conspiracy theories we are living in a wolrd where information is passed around like a bag of chips at a party. Thats what I believe makes the web so fun and addictive. If I would to give a review about the web I don't thing I would be able to give a definitive answer. Some things can be amazing on the web where others can be absolutely absurd. As far as my view on the web I believe it's very helpful and important to us. </p>
