--- a/portfolio/smartphone/index.html
+++ b/portfolio/smartphone/index.html
@@ -10,6 +10,9 @@
   <a href="/webdev1-fa20/portfolio/">
     Home
 </a>
+<a href="about/">
+  About page
+</a>
 
     <div class="container">
         <div class="group">
