--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,6 +33,10 @@
     <a href="Confused_net/">
         Site
     </a>
+
+    <a href="modal_popout/">
+        modal popout
+    </a>
 </div>
 
     
