--- a/webdevfinal/index.html
+++ b/webdevfinal/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Created By Recreating</title>
+    <title>lilonesock</title>
+    <link rel="shortcut icon" type="pics/png" href="pics/548af9a9eab8ea147a27d6fc.jfif">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
